--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.1.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-svg-transformer": "^0.13.0",
     "react-navigation": "^3.9.1",
     "styled-components": "^4.2.0"
